<?xml version="1.0"?>
<package format="3">
  <name>nclt2ros2</name>
  <version>1.0.0</version>
  <description>nclt2ros2 package provides ROS2 nodes for downloading, extracting, converting and visualizing the NCLT Dataset</description>
  <license>TODO</license>

  <maintainer email="alex.m.ernst14@gmail.com">Alex Ernst</maintainer>
  <author email="alex.m.ernst14@gmail.com">Alex Ernst</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
